changed the UI of the web

--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -17,3 +17,9 @@
     padding: 0.5rem 1rem;
     color: #fff;
 }
+
+.pagination__content a:hover{
+    background-color: #fff;
+    color: midnightblue;
+    font-weight: bold;
+}
